--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.learn.iet-framework": "3.1.3",
+    "com.unity.shadergraph": "15.0.6",
     "com.unity.test-framework": "1.3.5",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.8.2",
